# nimbus

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSING.md  Makefile  README.md  README.new.md  SECURITY.md  TRADEMARKS.md  cliff.toml  codecov.yml  compose.yaml  deny.toml  package-lock.json  package.json  test_format  tsconfig.base.json
crates/neovex/: Cargo.toml
crates/neovex-bin/: Cargo.toml  build.rs
crates/neovex-bin/src/: cli_ux.rs  codegen.rs  deploy.rs  dev.rs  dirs.rs  init.rs  main.rs  node.rs  test_support.rs  token.rs
crates/neovex-bin/src/compose/: commands.rs  discovery.rs  execution.rs  file.rs  lifecycle.rs  logs.rs  mod.rs  process.rs  project.rs  render.rs  tests.rs
crates/neovex-bin/src/encryption/: migrate.rs  mod.rs  rotate.rs  status.rs
crates/neovex-bin/src/machine/: api.rs  backend.rs  bootstrap.rs  client.rs  command.rs  files.rs  handlers.rs  manager.rs  mod.rs  protocol.rs  record.rs  render.rs  tests.rs
crates/neovex-bin/src/serve/: boot.rs  config.rs  mod.rs  runtime_limits.rs  tests.rs
crates/neovex-bin/src/service/: commands.rs  compose.rs  execution.rs  lifecycle.rs  logs.rs  mod.rs  process.rs  project.rs  render.rs  tests.rs
crates/neovex-bin/src/start/: boot.rs  config.rs  mod.rs  runtime_limits.rs  tests.rs
crates/neovex-bin/templates/backend/: package.json.tmpl
crates/neovex-bin/templates/cloud-functions/: gitignore
crates/neovex-bin/templates/convex/: gitignore  tsconfig.json
crates/neovex-engine/: Cargo.toml
crates/neovex-engine/benches/: embedded-provider-benchmarks.rs  libsql-replica-provider-benchmarks.rs  mysql-provider-benchmarks.rs  postgres-provider-benchmarks.rs  sqlite-replica-provider-benchmarks.rs
crates/neovex-engine/benches/embedded_provider_benchmarks/: config.rs  fixtures.rs  models.rs  report.rs  scenarios.rs  support.rs  workloads.rs
crates/neovex-engine/benches/libsql_replica_provider_benchmarks/: config.rs  fixtures.rs  models.rs  report.rs  scenarios.rs  suite.rs  support.rs
crates/neovex-engine/benches/mysql_provider_benchmarks/: report.rs  scenarios.rs  suite.rs  support.rs  workloads.rs
crates/neovex-engine/benches/postgres_provider_benchmarks/: report.rs  scenarios.rs  suite.rs  support.rs  workloads.rs
crates/neovex-engine/benches/provider_bench/: common.rs
crates/neovex-engine/examples/: embedded_provider_benchmarks.rs  materialized_surface_evaluation.rs  mysql_provider_benchmarks.rs  postgres_provider_benchmarks.rs  sqlite_replica_provider_benchmarks.rs
crates/neovex-engine/src/: evaluator.rs  lib.rs  persistence.rs  persistence_config.rs  replica.rs  scheduler.rs  subscriptions.rs  tenant.rs  test_support.rs  tests.rs  triggers.rs  verification.rs
crates/neovex-engine/src/evaluator/: cursor.rs  filtering.rs  ordering.rs  pagination.rs  (+2 more)
crates/neovex-runtime/: Cargo.toml
crates/neovex-runtime/benches/: runtime_pool_modes.rs
crates/neovex-runtime/src/: affinity.rs  backend.rs  context.rs  error.rs  executor.rs  host.rs  host_executor.rs  lib.rs  limits.rs  metrics.rs  module_loader.rs  node_compat.rs  runtime.rs  runtime_capabilities.rs  watchdog.rs  worker_loop.rs
crates/neovex-runtime/tests/: locker_smoke.rs
crates/neovex-sandbox/: Cargo.toml
crates/neovex-sandbox/src/: backend.rs  endpoint.rs  error.rs  instance.rs  lib.rs  process.rs  spec.rs
crates/neovex-sandbox/tests/: krun_linux_smoke.rs
crates/neovex-server/: Cargo.toml  build.rs
crates/neovex-server/src/: application_auth.rs  error_envelope.rs  http.rs  lib.rs  license.rs  owned_tasks.rs  protocol.rs  router.rs  sandbox.rs  service_manager.rs  service_registry.rs  state.rs  tests.rs  ws.rs
crates/neovex-server/tests/: reactive_loop.rs
crates/neovex-storage/: Cargo.toml
crates/neovex-storage/examples/: read_format_evaluation.rs
crates/neovex-storage/src/: async_storage.rs  commit_log.rs  document_codec.rs  encrypted_redb.rs  index.rs  keys.rs  lib.rs  libsql.rs  mysql.rs  postgres.rs  query_read.rs  runtime_bridge.rs  scheduler.rs  schema_store.rs  simulation.rs  sqlite.rs  store.rs  tests.rs  usage_store.rs
crates/neovex-test-support/: Cargo.toml
crates/neovex-test-support/src/: blocking_fault_injector.rs  http_api_fixture.rs  lib.rs  server_fixture.rs  service_fixture.rs  simulation.rs  websocket_fixture.rs
crates/neovex-testing/: Cargo.toml
crates/neovex-testing/src/: eventual.rs  faults.rs  lib.rs  repro.rs  runtime_profiles.rs  service_fixture.rs  timing.rs  websocket_fixture.rs
crates/neovex/src/: lib.rs
crates/nimbus/: Cargo.toml
crates/nimbus-bin/: Cargo.toml  build.rs
crates/nimbus-bin/src/: cli_ux.rs  codegen.rs  deploy.rs  dev.rs  dirs.rs  init.rs  local_server_client.rs  main.rs  node.rs  token.rs  ui.rs
crates/nimbus-core/: Cargo.toml
crates/nimbus-core/src/: dependency.rs  error.rs  lib.rs  query.rs  resource_path.rs  scheduled.rs  transaction.rs  trigger.rs  typed_scalar.rs  write_batch.rs
crates/nimbus-runtime/: Cargo.toml
crates/nimbus-runtime/benches/: runtime_pool_modes.rs
crates/nimbus-runtime/src/: context.rs  error.rs  executor.rs  host.rs  lib.rs  limits.rs  module_loader.rs  node_compat.rs  runtime.rs  runtime_capabilities.rs  watchdog.rs
crates/nimbus-server/: Cargo.toml  build.rs
crates/nimbus-server/src/: application_auth.rs  error_envelope.rs  lib.rs  machine_lifecycle.rs  protocol.rs  router.rs  sandbox.rs  service_manager.rs  service_registry.rs  state.rs  system_tenant.rs  tests.rs
crates/nimbus-server/tests/: reactive_loop.rs
crates/nimbus-storage/: Cargo.toml
crates/nimbus-storage/benches/: read-format-evaluation.rs
crates/nimbus-storage/src/: commit_log.rs  document_codec.rs  encrypted_redb.rs  keys.rs  lib.rs  libsql.rs  mysql.rs  postgres.rs  query_read.rs  runtime_bridge.rs  schema_store.rs  simulation.rs  sqlite.rs  store.rs  tests.rs  usage_store.rs
crates/nimbus-testing/: Cargo.toml
crates/nimbus-testing/src/: faults.rs  repro.rs  runtime_profiles.rs  service_fixture.rs  simulation.rs  websocket_fixture.rs
crates/nimbus/src/: lib.rs
(+2593 files in other folders)
