[workspace]
members = [
    "crates/neovex",
    "crates/neovex-bin",
    "crates/neovex-runtime",
    "crates/neovex-core",
    "crates/neovex-engine",
    "crates/neovex-server",
    "crates/neovex-storage",
    "crates/neovex-test-support",
]
resolver = "2"

[workspace.package]
publish = false

[workspace.lints.rust]
unused = "deny"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
deno_core = { version = "0.395", features = ["unsafe_use_unprotected_platform"] }
deno_error = "0.7"
futures = "0.3"
http = "1"
redb = "2"
reqwest = { version = "0.12", features = ["json"] }
ring = "0.17"
rmp = "0.8"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = "0.27"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
time = "0.3"
twox-hash = "2"
ulid = { version = "1", features = ["serde"] }
v8 = "147.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# ── Locker fork overrides ────────────────────────────────────────────
# Keep the public dependency surface aligned with upstream crate versions while
# selecting the fork implementation immutably at the workspace root.
[patch.crates-io]
deno_core = { git = "https://github.com/agentstation/deno_core", tag = "0.395.0-locker.2" }
v8 = { git = "https://github.com/agentstation/rusty_v8", tag = "v147.0.0-locker.1" }
