[workspace]
members = [
    "crates/neovex",
    "crates/neovex-bin",
    "crates/neovex-runtime",
    "crates/neovex-sandbox",
    "crates/neovex-core",
    "crates/neovex-engine",
    "crates/neovex-server",
    "crates/neovex-storage",
    "crates/neovex-testing",
]
resolver = "2"

[workspace.package]
version = "0.1.21"
edition = "2024"
publish = false
repository = "https://github.com/agentstation/neovex"
license-file = "LICENSE"

[workspace.lints.rust]
unused = "deny"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
aes-gcm-siv = "0.11"
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-sdk-kms = { version = "1.105.0", default-features = false, features = ["rt-tokio", "default-https-client"] }
arc-swap = "1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
deadpool-postgres = "0.14"
deno_core = { version = "0.395", features = ["unsafe_use_unprotected_platform"] }
deno_error = "0.7"
crc32fast = "1"
futures = "0.3"
fs2 = "0.4"
hex = "0.4"
hkdf = "0.12"
indicatif = "0.18"
hyper = "0.14.32"
http = "1"
signal-hook-registry = "1"
libsql = { version = "0.9.30", default-features = false, features = ["remote"] }
libc = "0.2"
mysql_async = "0.36"
native-tls = { version = "0.2", features = ["vendored"] }
parking_lot = "0.12"
rand = "0.8"
redb = "2"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls-vendored"] }
ring = "0.17"
rmp = "0.8"
rmp-serde = "1"
# Keep the bundled SQLCipher lane self-contained on Windows release builds:
# upstream `bundled-sqlcipher` requires OPENSSL_DIR there unless we also opt
# into vendored OpenSSL, which would otherwise make the GitHub runner
# environment part of the release contract.
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
serial_test = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = "1"
shell-words = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
testcontainers-modules = "0.15"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
tokio-postgres = "0.7"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = "0.28"
tower-service = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
time = "0.3"
twox-hash = "2"
ulid = { version = "1", features = ["serde"] }
v8 = "147.0.0"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# ── Locker fork overrides ────────────────────────────────────────────
# Keep the public dependency surface aligned with upstream crate versions while
# selecting the fork implementation immutably at the workspace root.
[patch.crates-io]
deno_core = { git = "https://github.com/agentstation/deno_core", tag = "0.395.0-locker.2" }
v8 = { git = "https://github.com/agentstation/rusty_v8", tag = "v147.0.0-locker.2" }
