[workspace]
members = [
    "crates/nimbus",
    "crates/nimbus-bin",
    "crates/nimbus-runtime",
    "crates/nimbus-sandbox",
    "crates/nimbus-core",
    "crates/nimbus-engine",
    "crates/nimbus-server",
    "crates/nimbus-storage",
    "crates/nimbus-testing",
]
resolver = "2"

[workspace.package]
version = "0.1.22"
edition = "2024"
publish = false
repository = "https://github.com/nimbus/nimbus"
license-file = "LICENSE"

[workspace.lints.rust]
unused = "deny"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
aes-gcm-siv = "0.11"
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-sdk-kms = { version = "1.105.0", default-features = false, features = ["rt-tokio", "default-https-client"] }
arc-swap = "1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bson = { version = "3.1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
deadpool-postgres = "0.14"
deno_ast = { version = "=0.53.1", features = ["transpiling"] }
deno_core = { version = "0.400", features = ["unsafe_use_unprotected_platform"] }
deno_crypto = "0.261.0"
deno_error = "0.7"
deno_fetch = "0.271.0"
deno_fs = { version = "0.157.0", features = ["sync_fs"] }
deno_http = "0.245.0"
deno_io = "0.157.0"
deno_napi = "0.178.0"
deno_net = "0.239.0"
deno_node = { version = "0.185.0", default-features = false, features = ["sync_fs", "sqlite"] }
deno_node_sqlite = "0.17.0"
deno_node_crypto = "0.17.0"
deno_os = "0.64.0"
deno_permissions = "0.106.0"
deno_process = "0.62.0"
deno_resolver = { version = "=0.78.0", features = ["deno_ast", "sync"] }
deno_semver = "=0.9.1"
deno_telemetry = "0.69.0"
deno_tls = "0.234.0"
deno_web = "0.278.0"
deno_webidl = "0.247.0"
deno_websocket = "0.252.0"
node_resolver = { version = "0.85", features = ["sync"] }
crc32c = "0.6"
crc32fast = "1"
futures = "0.3"
fs2 = "0.4"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
indicatif = "0.18"
hyper = "0.14.32"
http = "1"
signal-hook-registry = "1"
libsql = { version = "0.9.30", default-features = false, features = ["remote"] }
libc = "0.2"
mysql_async = "0.36"
native-tls = { version = "0.2", features = ["vendored"] }
parking_lot = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
rand = "0.8"
redb = "2"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls-vendored"] }
ring = "0.17"
rmp = "0.8"
rmp-serde = "1"
# Keep the bundled SQLCipher lane self-contained on Windows release builds:
# upstream `bundled-sqlcipher` requires OPENSSL_DIR there unless we also opt
# into vendored OpenSSL, which would otherwise make the GitHub runner
# environment part of the release contract. Nimbus also consumes the
# `node:sqlite` surface via `deno_node_sqlite`, so keep the broader Deno
# runtime feature set enabled on the shared workspace dependency.
rusqlite = { version = "0.37", features = ["bundled-sqlcipher-vendored-openssl", "unlock_notify", "session", "modern_sqlite", "limits", "backup"] }
serial_test = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = "1"
shell-words = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
testcontainers-modules = "0.15"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
tokio-postgres = "0.7"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = "0.28"
tower-service = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
time = "0.3"
twox-hash = "2"
ulid = { version = "1", features = ["serde"] }
sys_traits = "0.1.27"
url = "2"
v8 = "147.4.0"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# ── Locker fork overrides ────────────────────────────────────────────
# Keep the public dependency surface aligned with upstream crate versions while
# selecting the fork implementation immutably at the workspace root.
[patch.crates-io]
deno_core = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_crypto = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_fetch = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_fs = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_http = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_io = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_napi = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_net = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_node = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_node_sqlite = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_node_crypto = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_os = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_package_json = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_permissions = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_process = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_resolver = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_telemetry = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_tls = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_web = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_webidl = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
deno_websocket = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
node_resolver = { git = "https://github.com/nimbus/deno", tag = "v2.7.14-locker.43" }
v8 = { git = "https://github.com/nimbus/rusty_v8", tag = "v147.4.0-locker.7" }
