[package]
name = "neovex-bin"
version = "0.1.11"
edition = "2024"
publish.workspace = true
description = "Self-hosted JavaScript backend runtime with V8"
repository = "https://github.com/agentstation/neovex"
license-file = "../../LICENSE"

[lints]
workspace = true

[[bin]]
name = "neovex"
path = "src/main.rs"

[dependencies]
axum.workspace = true
clap.workspace = true
fs2.workspace = true
libc.workspace = true
neovex = { path = "../neovex" }
neovex-sandbox = { path = "../neovex-sandbox" }
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
signal-hook-registry.workspace = true
shell-words.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
flate2 = "1"
oci-client = "0.16"
zstd = "0.13"

[dev-dependencies]
neovex-testing = { path = "../neovex-testing" }
