[package]
name = "neovex-bin"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Self-hosted JavaScript backend runtime with V8"
repository.workspace = true
license-file.workspace = true

[lints]
workspace = true

[[bin]]
name = "neovex"
path = "src/main.rs"

[dependencies]
axum.workspace = true
clap.workspace = true
comfy-table.workspace = true
fs2.workspace = true
indicatif.workspace = true
libc.workspace = true
neovex = { path = "../neovex" }
neovex-sandbox = { path = "../neovex-sandbox" }
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
signal-hook-registry.workspace = true
shell-words.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
flate2 = "1"
oci-client = "0.16"
zstd = "0.13"

[dev-dependencies]
neovex-testing = { path = "../neovex-testing" }
