[package]
name = "neovex-engine"
version = "0.1.0"
edition = "2024"
publish.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
neovex-core = { path = "../neovex-core" }
neovex-storage = { path = "../neovex-storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
neovex-test-support = { path = "../neovex-test-support" }
proptest = "1"
tempfile.workspace = true
