[package]
name = "neovex-engine"
version = "0.1.0"
edition = "2024"
publish.workspace = true

[lints]
workspace = true

[features]
test-hooks = []

[dependencies]
base64.workspace = true
futures.workspace = true
neovex-core = { path = "../neovex-core" }
neovex-storage = { path = "../neovex-storage" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
neovex-test-support = { path = "../neovex-test-support" }
proptest = "1"
tempfile.workspace = true
