[package]
name = "neovex-engine"
version = "0.1.9"
edition = "2024"
publish.workspace = true

[lints]
workspace = true

[features]
test-hooks = []

[dependencies]
arc-swap.workspace = true
base64.workspace = true
futures.workspace = true
neovex-core = { path = "../neovex-core" }
neovex-storage = { path = "../neovex-storage" }
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
hyper.workspace = true
libsql.workspace = true
mysql_async.workspace = true
neovex-testing = { path = "../neovex-testing" }
proptest = "1"
serial_test.workspace = true
tempfile.workspace = true
testcontainers-modules = { workspace = true, features = ["blocking", "mysql", "postgres"] }

[[bench]]
name = "embedded-provider-benchmarks"
harness = false

[[bench]]
name = "postgres-provider-benchmarks"
harness = false

[[bench]]
name = "mysql-provider-benchmarks"
harness = false

[[bench]]
name = "libsql-replica-provider-benchmarks"
harness = false

[[bench]]
name = "materialized-surface-evaluation"
harness = false
