[package]
name = "neovex-runtime"
version = "0.1.0"
edition = "2024"
publish.workspace = true

[lints]
workspace = true

[dependencies]
deno_core.workspace = true
deno_error.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
