[package]
name = "neovex-runtime"
version = "0.1.9"
edition = "2024"
publish.workspace = true

[lints]
workspace = true

[dependencies]
deno_core.workspace = true
deno_error.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
twox-hash.workspace = true

[dev-dependencies]
criterion = "0.8.2"
tempfile.workspace = true
tracing-subscriber.workspace = true
v8.workspace = true

[[bench]]
name = "runtime_pool_modes"
harness = false
