[package]
name = "neovex-sandbox"
version = "0.1.3"
edition = "2024"
publish.workspace = true

[lints]
workspace = true

[dependencies]
libc.workspace = true
neovex-core = { path = "../neovex-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true
