[package]
name = "neovex-sandbox"
version = "0.1.10"
edition = "2024"
publish.workspace = true

[lints]
workspace = true

[dependencies]
flate2 = "1"
fs2.workspace = true
libc.workspace = true
neovex-core = { path = "../neovex-core" }
oci-client = "0.16"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar = "0.4"
thiserror.workspace = true
tokio.workspace = true
ulid.workspace = true
zstd = "0.13"

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true
