[package]
name = "neovex-sandbox"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
flate2 = "1"
fs2.workspace = true
libc.workspace = true
neovex-core = { path = "../neovex-core" }
oci-client = "0.16"
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
sha2.workspace = true
tar = "0.4"
thiserror.workspace = true
tokio.workspace = true
ulid.workspace = true
zstd = "0.13"

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }
