[package]
name = "neovex-server"
version = "0.1.0"
edition = "2024"
publish.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
neovex-runtime = { path = "../neovex-runtime" }
neovex-core = { path = "../neovex-core" }
neovex-engine = { path = "../neovex-engine" }
futures.workspace = true
http.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
neovex-test-support = { path = "../neovex-test-support" }
tempfile.workspace = true
tokio-tungstenite.workspace = true
