[package]
name = "neovex-server"
version = "0.1.0"
edition = "2024"
publish.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
neovex-runtime = { path = "../neovex-runtime" }
neovex-sandbox = { path = "../neovex-sandbox" }
neovex-core = { path = "../neovex-core" }
neovex-engine = { path = "../neovex-engine", features = ["test-hooks"] }
futures.workspace = true
http.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
neovex-storage = { path = "../neovex-storage" }
neovex-testing = { path = "../neovex-testing" }
tempfile.workspace = true
tokio-tungstenite.workspace = true
