[package]
name = "neovex-storage"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
neovex-core = { path = "../neovex-core" }
redb.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
