[package]
name = "neovex-storage"
version = "0.1.9"
edition = "2024"
publish.workspace = true

[lints]
workspace = true

[dependencies]
deadpool-postgres.workspace = true
hyper.workspace = true
libsql.workspace = true
mysql_async.workspace = true
native-tls.workspace = true
neovex-core = { path = "../neovex-core" }
redb.workspace = true
reqwest.workspace = true
rmp.workspace = true
rmp-serde.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
tokio-native-tls.workspace = true
tokio-postgres.workspace = true
tower-service.workspace = true
tracing.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true
testcontainers-modules = { workspace = true, features = ["blocking", "mysql", "postgres"] }

[[bench]]
name = "read-format-evaluation"
harness = false
