[package]
name = "neovex-testing"
version = "0.1.0"
edition = "2024"
publish.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
neovex-core = { path = "../neovex-core" }
neovex-runtime = { path = "../neovex-runtime" }
neovex-storage = { path = "../neovex-storage" }
futures.workspace = true
http.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
