[package]
name = "neovex-testing"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
neovex-core = { path = "../neovex-core" }
neovex-runtime = { path = "../neovex-runtime" }
neovex-storage = { path = "../neovex-storage" }
futures.workspace = true
http.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
