[package]
name = "neovex"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
neovex-runtime = { path = "../neovex-runtime" }
neovex-sandbox = { path = "../neovex-sandbox" }
neovex-core = { path = "../neovex-core" }
neovex-engine = { path = "../neovex-engine" }
neovex-server = { path = "../neovex-server" }
neovex-storage = { path = "../neovex-storage" }
