[package]
name = "nimbus-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
ulid.workspace = true
