[package]
name = "nimbus-runtime"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
deno_ast.workspace = true
deno_core.workspace = true
deno_crypto.workspace = true
deno_error.workspace = true
deno_fetch.workspace = true
deno_fs.workspace = true
deno_http.workspace = true
deno_io.workspace = true
deno_napi.workspace = true
deno_net.workspace = true
deno_node.workspace = true
deno_node_sqlite.workspace = true
deno_node_crypto.workspace = true
deno_os.workspace = true
deno_permissions.workspace = true
deno_process.workspace = true
deno_resolver.workspace = true
deno_semver.workspace = true
deno_telemetry.workspace = true
deno_tls.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
deno_websocket.workspace = true
node_resolver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sys_traits.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
twox-hash.workspace = true
url.workspace = true

[dev-dependencies]
criterion = "0.8.2"
tracing-subscriber.workspace = true
v8.workspace = true

[[bench]]
name = "runtime_pool_modes"
harness = false
