[package]
name = "nimbus-server"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
bson.workspace = true
crc32c.workspace = true
nimbus-runtime = { path = "../nimbus-runtime" }
nimbus-sandbox = { path = "../nimbus-sandbox" }
nimbus-machine = { path = "../nimbus-machine" }
nimbus-core = { path = "../nimbus-core" }
nimbus-engine = { path = "../nimbus-engine" }
futures.workspace = true
fs2.workspace = true
hmac.workspace = true
http.workspace = true
libc.workspace = true
pbkdf2.workspace = true
prost = "0.13.1"
prost-types = "0.13.1"
reqwest.workspace = true
ring.workspace = true
rust-embed = { version = "=8.11.0", features = ["interpolate-folder-path"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
tokio.workspace = true
tonic = "0.13.0"
tonic-web = "0.13.0"
tower = "0.5"
tower-http.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.13.0"

[dev-dependencies]
nimbus-engine = { path = "../nimbus-engine", features = ["test-hooks"] }
nimbus-storage = { path = "../nimbus-storage" }
nimbus-testing = { path = "../nimbus-testing" }
serde_yaml.workspace = true
tempfile.workspace = true
tokio-tungstenite.workspace = true
wiremock = "0.6"
